# booking-ai-system

./: .dockerignore  .gitignore  Dockerfile  README.md
booking-ai-chatbot/: .env.example  README.md  pyproject.toml
booking-ai-chatbot/backend/tests/: test_lookup_booking_flow.py  test_orchestrator.py
booking-ai-chatbot/tests/: conftest.py  test_integrations.py  test_main.py  test_rag_flow.py  test_tools.py
booking-ai-system-be/: .env.example  Dockerfile  README.md  pyproject.toml
booking-ai-system-be/alembic/versions/: 7f4c2a1b9d10_add_reservation_assignment_source.py
booking-ai-system-be/app/: main.py
booking-ai-system-be/app/core/: auth.py  config.py
booking-ai-system-be/app/mappers/: __init__.py  booking_mapper.py
booking-ai-system-be/app/repositories/: booking_repository.py  course_repository.py  reservation_repository.py  restriction_repository.py  shift_repository.py  shop_repository.py  therapist_repository.py
booking-ai-system-be/app/schemas/: available_slot.py  booking.py  common.py  schedule.py  shop.py  therapist.py
booking-ai-system-be/app/scripts/: seed_data.py
booking-ai-system-be/app/services/: __init__.py  booking_query_service.py  booking_service.py  booking_time.py  course_service.py  restriction_service.py  schedule_service.py  shop_service.py  slot_service.py  (+4 more)
booking-ai-system-be/tests/: conftest.py  test_admin_flow.py  test_booking_flow.py  test_booking_lookup_service.py  test_booking_time.py  test_group_booking_availability.py  test_layered_architecture.py  test_query_services.py  test_route_contracts.py  test_services.py
(+95 files in other folders)
