[project]
name = "booking-ai-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139",
    "uvicorn>=0.51",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.1",
    "openai>=1",
    "sentence-transformers>=3",
    "qdrant-client>=1.12",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
