[project]
name = "booking-ai-system-be"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139",
    "uvicorn>=0.51",
    "sqlalchemy>=2.0",
    "alembic>=1.18",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.1",
    "tzdata>=2025.2; platform_system == 'Windows'",
    "supabase>=2",
    "openai>=1",
    "sentence-transformers>=3",
    "pgvector>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]
